Update sign in an home page

--- a/TasksEvaluation/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TasksEvaluation/Areas/Identity/Pages/Account/Login.cshtml
@@ -14,7 +14,7 @@
                                 <div class="mb-5">
                                     <div class="text-center mb-4">
                                         <a href="#!">
-                                            <img src="~/img/35d95823-526f-4919-9150-1b77ae9cf935.jfif" alt="BootstrapBrain Logo" width="175" height="57">
+                                            <img src="~/img/35d95823-526f-4919-9150-1b77ae9cf935.jfif" alt="BootstrapBrain Logo" class="img-fluid" style="max-width: 80%; height: auto;">
                                         </a>
                                     </div>
                                     <h4 class="text-center">Welcome back you've been missed!</h4>
