--- a/TasksEvaluation/wwwroot/css/site.css
+++ b/TasksEvaluation/wwwroot/css/site.css
@@ -1,28 +1,24 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
     margin-bottom: 60px;
-    display: flex;
-    flex-wrap: nowrap;
-}
-body {
     display: flex;
     flex-wrap: nowrap;
 }
@@ -33,6 +29,9 @@ body {
     height: 100%;
     background: #343a40;
     transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
     .sidebar a {
