--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <button class="btn btn-primary toggle-btn" id="sidebarToggle"><i class="fa-solid fa-bars"></i></button>
+    <button class="btn btn-secondary toggle-btn m-3" id="sidebarToggle"><i class="fa-solid fa-bars"></i></button>
     <div class="sidebar">
         <div>
             <h3><a href="#">TaskEvaluation</a></h3>
@@ -24,6 +24,7 @@
         </div>
     </div>
     <div class="content">
+        <br /><br />
         @RenderBody()
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
