--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <div class="sidebar">
         <div>
             <h3><a href="#">TaskEvaluation</a></h3>
-            <a href="#">Dashboard</a>
+            <a asp-controller="Student" asp-action="Index" >Student</a>
             <a href="#">Settings</a>
             <a href="#">Profile</a>
             <a href="#">Help</a>
