--- a/TasksEvaluation/Views/Student/Delete.cshtml
+++ b/TasksEvaluation/Views/Student/Delete.cshtml
@@ -4,45 +4,36 @@
     ViewData["Title"] = "Delete Student";
 }
 
-<h2>Delete Student</h2>
+<h1>Delete Student</h1>
 
-<h4>Student</h4>
-<hr />
-<dl class="row">
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.FullName)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.FullName)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.MobileNumber)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.MobileNumber)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Email)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Email)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.ProfilePic)
-    </dt>
-    <dd class="col-sm-10">
-        <img src="@Model.ProfilePic" alt="Profile Picture" width="100" height="100" />
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.GroupId)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.GroupId)
-    </dd>
-</dl>
+<h3>Are you sure you want to delete this student?</h3>
+<div>
+    <h4>@Model.FullName</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            Full Name
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FullName)
+        </dd>
+        <dt class="col-sm-2">
+            Mobile Number
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MobileNumber)
+        </dd>
+        <dt class="col-sm-2">
+            Email
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+    </dl>
 
-<form asp-action="DeleteConfirmed">
-    <input type="hidden" asp-for="Id" />
-    <input type="submit" value="Delete" class="btn btn-danger" /> |
-    <a asp-action="Index">Back to List</a>
-</form>
+    <form asp-action="Delete" >
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    </form>
+</div>
