--- a/TasksEvaluation/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TasksEvaluation/Areas/Identity/Pages/Account/Register.cshtml
@@ -10,7 +10,7 @@
             <div class="col-12 col-md-6 bsb-tpl-bg-platinum">
                 <div class="d-flex flex-column justify-content-between h-100 p-3 p-md-4 p-xl-5">
                     
-                    <img class="img-fluid rounded mx-auto " loading="lazy" src="~/img/35d95823-526f-4919-9150-1b77ae9cf935.jfif" width=100% height=20% alt=" Logo">
+                    <img class="img-fluid rounded mx-auto " loading="lazy" src="~/img/logo.png" width=100% height=20% alt=" Logo">
                     <p class="mb-0">Already have an account? <a asp-area="Identity" asp-page="/Account/Login" class="link-secondary text-decoration-none">Log in</a></p>
                 </div>
             </div>
