--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿<!
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -14,7 +15,7 @@
     <div class="sidebar">
         <div>
             <h3><a href="#">TaskEvaluation</a></h3>
-            <a asp-controller="Student" asp-action="Index" >Student</a>
+            <a asp-controller="Student" asp-action="Index">Student</a>
             <a href="#">Settings</a>
             <a href="#">Profile</a>
             <a href="#">Help</a>
