--- a/TasksEvaluation/wwwroot/css/site.css
+++ b/TasksEvaluation/wwwroot/css/site.css
@@ -1,5 +1,4 @@
-html {
-    font-size: 14px;
+font-size: 14px;
 }
 
 @media (min-width: 768px) {
@@ -42,6 +41,8 @@ body {
     }
 
         .sidebar a:hover {
+            color: black;
+            text-decoration: none;
             background: #575d63;
         }
 
@@ -78,4 +79,9 @@ body {
     .toggle-btn {
         display: none;
     }
+}
+
+.a {
+    text-decoration: none;
+    color: black;
 }
