add assignments table

--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
         <div>
             <h3><a href="#">TaskEvaluation</a></h3>
             <a asp-controller="Student" asp-action="Index">Student</a>
+            <a asp-controller="Assignment" asp-action="Index">Assignment</a>
             <a href="#">Settings</a>
             <a href="#">Profile</a>
             <a href="#">Help</a>
