--- a/TasksEvaluation/Views/Shared/_LoginPartial.cshtml
+++ b/TasksEvaluation/Views/Shared/_LoginPartial.cshtml
@@ -24,10 +24,10 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link ml-3" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
+            <a class="nav-link ml-3" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+        </li>
     <li class="nav-item">
-        <a class="nav-link ml-3" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link ml-3"  asp-area="" asp-controller="Account" asp-action="Login">Login</a>
     </li>
 }
 </ul>
