--- a/TasksEvaluation/Views/Account/Login.cshtml
+++ b/TasksEvaluation/Views/Account/Login.cshtml
@@ -39,6 +39,15 @@
                                 <button type="submit" class="btn btn-primary btn-lg">Login</button>
                             </div>
                         </form>
+
+                        <div class="row">
+                            <div class="col-12">
+                                <hr class="mt-5 mb-4 border-secondary-subtle">
+                                <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
+                                    <a asp-action="ForgotPassword" asp-controller="Account" class="link-secondary text-decoration-none">Forgot password</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
