--- a/TasksEvaluation/Views/Account/Login.cshtml
+++ b/TasksEvaluation/Views/Account/Login.cshtml
@@ -44,7 +44,8 @@
                             <div class="col-12">
                                 <hr class="mt-5 mb-4 border-secondary-subtle">
                                 <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
-                                    <a asp-action="ForgotPassword" asp-controller="Account" class="link-secondary text-decoration-none">Forgot password</a>
+
+                                    <a asp-area="Identity" asp-page="/Account/ForgotPassword" class="link-secondary text-decoration-none">Forgot password</a>
                                 </div>
                             </div>
                         </div>
