--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿<!
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -9,17 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
-
 <body>
     <button class="btn btn-secondary toggle-btn m-3" id="sidebarToggle"><i class="fa-solid fa-bars"></i></button>
     <div class="sidebar">
         <div>
-            <h3><a href="#">TaskEvaluation</a></h3>
-            <a asp-controller="Student" asp-action="Index">Student</a>
-            <a asp-controller="Assignment" asp-action="Index">Assignment</a>
-            <a href="#">Settings</a>
-            <a href="#">Profile</a>
-            <a href="#">Help</a>
+            <h3><a href="#" class="sidebar-header">TaskEvaluation</a></h3>
+            <a asp-controller="Student" asp-action="Index" class="sidebar-link">Student</a>
+            <a asp-controller="Assignment" asp-action="Index" class="sidebar-link">Assignment</a>
+            <a href="#" class="sidebar-link">Settings</a>
+            <a href="#" class="sidebar-link">Profile</a>
+            <a href="#" class="sidebar-link">Help</a>
         </div>
         <div>
             <partial name="_LoginPartial" />
@@ -43,32 +41,3 @@
     </script>
 </body>
 </html>
-
-@* <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TasksEvaluation</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-                <partial name="_LoginPartial"/>
-            </div>
-        </nav>
-    </header> *@
-@*
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - TasksEvaluation - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer> *@
