add log in as student

--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
             else
             {
                 <a href="#" class="sidebar-link">Help</a>
-                <a href="#" class="sidebar-link">LogIn As Student</a>
+                <a asp-controller="StudentSolution" asp-action="LogIn" class="sidebar-link">LogIn As Student</a>
             }
         </div>
         <div>
