--- a/TasksEvaluation/Views/_ViewImports.cshtml
+++ b/TasksEvaluation/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TasksEvaluation
 @using TasksEvaluation.Models
+@using TasksEvaluation.Core.DTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
