--- a/TasksEvaluation/Views/Account/Register.cshtml
+++ b/TasksEvaluation/Views/Account/Register.cshtml
@@ -15,7 +15,7 @@
                                 <img src="~/img/logo.png" alt="Logo" class="img-fluid" style="max-width: 80%; height: auto;">
                             </a>
                         </div>
-                        <h2 class="text-center">Register</h2>
+                        <h2 class="text-center">Add Admin </h2>
                         <form asp-action="Register" method="post" class="mt-4">
                             <div class="form-floating mb-3">
                                 <input asp-for="Email" class="form-control" placeholder="Email" required />
@@ -43,7 +43,7 @@
                                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                             </div>
                             <div class="d-grid">
-                                <button type="submit" class="btn btn-primary btn-lg">Register</button>
+                                <button type="submit" class="btn btn-primary btn-lg">Add new Admin</button>
                             </div>
                         </form>
                     </div>
