--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <a asp-controller="Student" asp-action="Index" class="sidebar-link">Student</a>
                 <a asp-controller="Assignment" asp-action="Index" class="sidebar-link">Assignment</a>
                 <a href="#" class="sidebar-link">Solution</a>
-                <a class="nav-link ml-3" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                <a class="sidebar-link" asp-area="" asp-controller="Account" asp-action="Register">Add Admin</a>
                 <a href="#" class="sidebar-link">Help</a>
             }
             else
