add evaluation grades dor solutions

--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
             {
                 <a asp-controller="Student" asp-action="Index" class="sidebar-link">Student</a>
                 <a asp-controller="Assignment" asp-action="Index" class="sidebar-link">Assignment</a>
-                <a href="#" class="sidebar-link">Solution</a>
+                <a asp-controller="Solution" asp-action="Index" class="sidebar-link">Solution</a>
                 <a class="sidebar-link" asp-area="" asp-controller="Account" asp-action="Register">Add Admin</a>
                 <a href="#" class="sidebar-link">Help</a>
             }
