Update Home page

--- a/TasksEvaluation/Views/Home/Index.cshtml
+++ b/TasksEvaluation/Views/Home/Index.cshtml
@@ -2,8 +2,30 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center container-fluid mt-4 custom-container">
-    <h1 class="display-4">Task Evaluation Website</h1>
-    <h3> Home Page </h3>
+<div class="container-fluid mt-4 mb-4 custom-container">
+    <div class="text-center">
+        <h1 class="display-4">Task Evaluation Website</h1>
+    </div>
+    <div class="d-flex justify-content-center">
+        <img src="~/img/logo.png" alt="BootstrapBrain Logo" class="img-fluid mb-4" style="max-width: 20%; height: auto;">
+    </div>
 
+    <div class="project-description mt-5">
+        <h2 class="text-dark text-center">Main idea of the Project</h2>
+        <ol class="text-dark lead text-left">
+            <li>Our platform is designed for uploading and correcting assignments.</li>
+            <li>Students can submit their solutions in PDF or image formats and await corrections. The platform also offers various courses.</li>
+            <li>The admin is responsible for correcting assignments, adding students, and creating academic emails for them.</li>
+            <li>Through these emails, students can upload their projects or assignments.</li>
+            <li>The admin also adds assignments and exam questions, provides guidance, and manages the creation of admin emails. No user can create an admin email independently.</li>
+        </ol>
+
+        <ol class="text-dark lead" style="direction: rtl; text-align: right;">
+            <li>منصتنا مخصصة لرفع وتصحيح الواجبات.</li>
+            <li>يمكن للطلاب إرسال حلولهم بصيغتي PDF أو صورة وانتظار التصحيح. توفر المنصة أيضًا دورات متنوعة.</li>
+            <li>المسؤول عن الإدارة يقوم بتصحيح الواجبات، إضافة الطلاب، وإنشاء بريد إلكتروني أكاديمي لهم.</li>
+            <li>من خلال هذه البريد الإلكتروني، يمكن للطلاب رفع مشاريعهم أو واجباتهم.</li>
+            <li>يقوم المسؤول أيضًا بإضافة الواجبات وأسئلة الامتحانات، تقديم الإرشادات، وإدارة إنشاء البريد الإلكتروني الإداري. لا يمكن لأي مستخدم إنشاء بريد إلكتروني إداري بشكل مستقل.</li>
+        </ol>
+    </div>
 </div>
