--- a/TasksEvaluation/Views/Shared/_LoginPartial.cshtml
+++ b/TasksEvaluation/Views/Shared/_LoginPartial.cshtml
@@ -24,7 +24,7 @@
 else
 {
     <li class="nav-item">
-            <a class="nav-link ml-3"  asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+            <a class="nav-link ml-3"  asp-area="" asp-controller="Account" asp-action="Login">Adminstration</a>
     </li>
 }
 </ul>
