edit assignment crud

--- a/TasksEvaluation/Views/Assignment/Details.cshtml
+++ b/TasksEvaluation/Views/Assignment/Details.cshtml
@@ -28,6 +28,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DeadLine)
         </dd>
+        <dt class="col-sm-2">
+            Group ID
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.GroupId)
+        </dd>
     </dl>
 </div>
 <div>
