--- a/TasksEvaluation/Views/Assignment/Delete.cshtml
+++ b/TasksEvaluation/Views/Assignment/Delete.cshtml
@@ -29,6 +29,13 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DeadLine)
         </dd>
+        <dt class="col-sm-2">
+            Group ID
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.GroupId)
+        </dd>
+
     </dl>
 
     <form asp-action="Delete">
