Add Evaluated solution details

--- a/TasksEvaluation/Views/EvaluatedAssignment/Index.cshtml
+++ b/TasksEvaluation/Views/EvaluatedAssignment/Index.cshtml
@@ -6,11 +6,12 @@
 
 <h2>Evaluated Assignments</h2>
 
-
-
-        @foreach (var assignment in Model)
-        {
-            
-                <p>@assignment.Title</p>
-        }
-
+<div class="list-group">
+    @foreach (var assignment in Model)
+    {
+        <div class="list-group-item">
+            <p><strong>@assignment.Title</strong></p>
+            <a href="@Url.Action("Details", "EvaluatedAssignment", new { assignmentId = assignment.Id })" class="btn btn-primary">View Details</a>
+        </div>
+    }
+</div>
