--- a/TasksEvaluation/Views/About/Index.cshtml
+++ b/TasksEvaluation/Views/About/Index.cshtml
@@ -134,10 +134,15 @@
                     <img src="~/img/btt.jpg" width="120" class="circle">
                 </div>
                 <div class="text-center mt-3">
-                    <h5 class="mt-2 mb-0">Mostafa Mohammed</h5>
-                    <span>Fullstack .NET Developer, Next.js</span>
+                    <h5 class="mt-2 mb-0">Mostafa Mohammed Batt</h5>
+                    <span>Fullstack .NET Developer</span>
                     <div class="px-4 mt-1">
-                        <p class="custom-fonts">"Solid foundation for any project. Designing with Figma components that can be easily translated to the utility classes of Tailwind CSS is a huge timesaver!"</p>
+                        <p class="custom-fonts">
+                            "Enthusiastic and motivated Computer Science graduate with a passion for software development .
+                            I'm an experienced developer with a solid academic background and some real-world experience,
+                            good at breaking down tough problems and using my programming skills to solve them. I keep
+                            up with the latest tech trends and can think through complex issues logically"
+                        </p>
                     </div>
                     <ul class="custom-social-list">
                         <li><i class="fa fa-facebook"></i></li>
